# speedy

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  tests.yml
src/speedy/: __init__.py  _multipart.py  _parsers.py  app.py  application.py  background.py  concurrence.py  constants.py  enums.py  exceptions.py  status_code.py
src/speedy/connection/: base.py  request.py  websocket.py  websockets.py
src/speedy/datastructures/: __init__.py  cookie.py  headers.py  multi_dict.py  multi_dicts.py  secrets_values.py  state.py  upload_file.py  url.py  websocket.py
src/speedy/endpoints/: __init__.py  http_endpoint.py  websoket_endpoint.py
src/speedy/exceptions/: __init__.py  base.py  connection.py  http_exceptions.py  response.py  route.py  websocket.py  websocket_exceptions.py
src/speedy/middleware/: __init__.py  base.py  errors.py
src/speedy/protocols/: __init__.py  app.py  app_logs.py  application.py  background.py  connection.py  endpoints.py  http_connect.py  methods.py  middleware.py  multi_dicts.py  request.py  response.py  route.py  routing.py  secrets_values.py  websocket.py  websockets.py
src/speedy/request/: __init__.py  base.py
src/speedy/requests/: __init__.py  base.py  request.py
src/speedy/response/: __init__.py  base.py  html.py  json.py  plain.py  plaint_text.py
src/speedy/routing/: __init__.py  base.py
src/speedy/types/: __init__.py  application.py  application_types.py  asgi_types.py  lifespan.py  structure_type.py
src/speedy/utils/: __init__.py  convertors.py  helpers.py  predicates.py  sync.py
src/speedy/websocket/: __init__.py  base.py
tests/: test_cuncurrency.py  test_multipart.py  test_parsers.py
tests/datastructures/: test_cookie.py  test_headers.py  test_multi_dicts.py  test_upload_file.py  test_url.py
tests/test_datastructures/: test_url.py
tests/utils/: test_helpers.py  test_predicates.py
