[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "speedy"
version = "0.0.1"
authors = [
    { name = "Alexander Kuzmin", email = "qrer71@yandex.ru" }
]
license = { file = "LICENSE" }
description = "In development"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "multidict<=6.0.5",
]

[project.optional-dependencies]
ujson = ["ujson<=5.9.0"]
orjson = ["orjson<=3.10.2"]
dev = [
    "pytest<=8.2.0",
    "mypy<=1.10.0",
    "ujson<=5.9.0",
    "orjson<=3.10.2",
    "httpx<=0.27.0"
]
linter = [
    "mypy<=1.10.0",
    "types-ujson<=5.9.0"
]

[project.urls]
"Homepage" = "https://github.com/WolfMTK/speedy"

[tool.mypy]
strict = true
ignore_missing_imports = true
strict_equality = false
