[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "speedy"
version = "0.0.1"
authors = [
    { name = "Alexander Kuzmin", email = "qrer71@yandex.ru" }
]
license = { file = "LICENSE" }
description = "In development"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "multidict<=6.0.5"
]

[project.optional-dependencies]
ujson = ["ujson<=5.10.0"]
orjson = ["orjson<=3.10.3"]
dev = [
    "covdefaults",
    "pytest<=8.2.1",
    "ujson<=5.10.0",
    "orjson<=3.10.3",
    "httpx<=0.27.0",
    "pytest-cov"
]
linter = [
    "mypy<=1.10.0",
    "types-ujson<=5.10.0.20240515"
]

[project.urls]
"Homepage" = "https://github.com/WolfMTK/speedy"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
ignore_missing_imports = true
strict_equality = false
enable_error_code = "ignore-without-code"
implicit_reexport = false

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
omit = ["*/tests/*"]
parallel = true
plugins = ["covdefaults"]
source = ["speedy"]
